fix fullsize tile :active margin to not flicker when tile is clicked

--- a/styles/main.less
+++ b/styles/main.less
@@ -1385,7 +1385,7 @@ camera_stream {
 .-item-non-clickable {
    /* use classes: ['-item-non-clickable'] to display as non-interactive tile */
    &:active {
-      margin: -@popupPadding !important;
+      margin: 0 !important;
       border: none !important;
    }
    .item-clickable {
